<resources>
    <string name="app_name">Smart Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Neun</string>
    <string name="nav_header_subtitle">Smart Home</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_add">Agregar perfil</string>
    <string name="menu_agenda">Cambiar perfil</string>
    <string name="menu_delete">Borrar perfil</string>
    <string name="menu_help">Ayuda</string>
    <string name="menu_settings">Configuración</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
