<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/menu_add" />
        <item
            android:id="@+id/nav_change"
            android:icon="@drawable/ic_menu_agenda"
            android:title="@string/menu_agenda" />
        <item
            android:id="@+id/nav_delete"
            android:icon="@drawable/ic_menu_delete"
            android:title="@string/menu_delete" />

    </group>

    <item android:title="Help">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
